# PhishScope

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  DEBATE_MODE.md  Dockerfile  EXAMPLE_REPORT.md  LICENSE  LLM_PROVIDERS.md  MCP_REMOTE_BROWSER_ARCHITECTURE.md  MCP_SERVER_REQUIREMENTS.md  MCP_SERVER_SETUP_GUIDE.md  MULTI_PROVIDER_SUMMARY.md  Makefile  QUICKSTART.md  QUICKSTART_MCP_SERVER.md  README.md  START_WEB_UI.md  TESTING.md  WEB_APP_README.md  docker-compose.yml  mcp_server_install.sh  phishscope.py  phishscope_batch.py  phishscope_cli.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  start_web.sh  start_web_ui.sh  web_app.py
.github/workflows/: tests.yml
agents/: __init__.py  batch_analyzer.py  dom_inspector.py  enhanced_report_agent.py  js_inspector.py  llm_agent.py  network_inspector.py  page_loader.py  report_agent.py
docs/: README.md  index.html  serve.sh  test-simulator.html
docs/css/: style.css
docs/js/: main.js
examples/: ai_analysis_example.md
frontend/: .gitignore  UI_DESIGN_SYSTEM.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ExportButton.jsx  ResultsPanel.jsx  ThemeToggle.jsx  UrlInput.jsx  VirusTotalCard.jsx
frontend/src/pages/: AnalysisPage.jsx  DashboardPage.jsx  DebateAnalysisPage.jsx
frontend/src/services/: apiService.js
frontend/src/theme/: colors.js
src/phishscope/: __init__.py
src/phishscope/agents/: virustotal_agent.py
templates/: index.html
tests/: __init__.py  conftest.py  test_dom_inspector.py  test_integration.py  test_js_inspector.py  test_llm_agent.py  test_network_inspector.py  test_page_loader.py  test_report_agent.py
utils/: __init__.py  logger.py
(+39 files in other folders)
